# vktiny

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  LICENSE
assets/sponza/: sponza.gltf
include/: GLTFModel.h  Loaders.h  VulkanAllocator.h  VulkanApp.h  VulkanCamera.h  VulkanDevice.h  VulkanFramebuffer.h  VulkanGlobals.h  VulkanInitializers.h  VulkanInstance.h  VulkanRenderer.h  VulkanSurface.h  VulkanSwapchain.h  VulkanTexture.h  VulkanTools.h  keycodes.h
shaders/: compile.bat  mesh_basic.frag  mesh_basic.fspv  mesh_basic.vert  mesh_basic.vspv  tbn.frag  tbn.fspv  tbn.vert  tbn.vspv
source/: GLTFModel.cpp  VMA_IMPL.cpp  VulkanApp.cpp  VulkanCamera.cpp  VulkanRenderer.cpp  imgui_impl_glfw.cpp  main.cpp
tools/VmaDumpVis/: allocator_stats.json  allocator_stats_0.json
tools/shader_compiler/: compile.py
